Create custom ldap_auth, hr_recruitment only display salary to manager

--- a/ext_addons/hr_recruitment_custom/views/hr_recruitment_views.xml
+++ b/ext_addons/hr_recruitment_custom/views/hr_recruitment_views.xml
@@ -1,12 +1,36 @@
 <odoo>
     <data>
 
-      <!-- menu categories -->
-      <!-- Add menu Messages entry in Recruitment -->
-      <menuitem name="Messages" id="menu_recruitment_menu_mail_message"
+        <!-- menu categories -->
+        <!-- Add menu Messages entry in Recruitment -->
+        <menuitem name="Messages" id="menu_recruitment_menu_mail_message"
                 parent="hr_recruitment.menu_hr_recruitment_root" action="mail_custom.custom_action_view_mail_message"/>
 
-      <!-- actions -->
+        <!-- actions -->
+
+        <!-- views -->
+        <record model="ir.ui.view" id="custom_crm_case_form_view_job">
+            <field name="name">Custom - Jobs - Recruitment Form</field>
+            <field name="model">hr.applicant</field>
+            <field name="inherit_id" ref="hr_recruitment.crm_case_form_view_job"/>
+            <field name="arch" type="xml">
+                <xpath expr="/form/sheet/group/group[4]/div[1]/field[@name='salary_expected']" position="before">
+                    <field name="salary_visible" invisible="1"/>
+                </xpath>
+                <xpath expr="/form/sheet/group/group[4]/label[1]" position="attributes">
+                    <attribute name="attrs">{'invisible':[('salary_visible','=',False)]}</attribute>
+                </xpath>
+                <xpath expr="/form/sheet/group/group[4]/div[1]" position="attributes">
+                    <attribute name="attrs">{'invisible':[('salary_visible','=',False)]}</attribute>
+                </xpath>
+                <xpath expr="/form/sheet/group/group[4]/label[2]" position="attributes">
+                    <attribute name="attrs">{'invisible':[('salary_visible','=',False)]}</attribute>
+                </xpath>
+                <xpath expr="/form/sheet/group/group[4]/div[2]" position="attributes">
+                    <attribute name="attrs">{'invisible':[('salary_visible','=',False)]}</attribute>
+                </xpath>
+            </field>
+        </record>
 
     </data>
 </odoo>
