--- a/ext_addons/oit_hr_recruitment/views/hr_recruitment_views.xml
+++ b/ext_addons/oit_hr_recruitment/views/hr_recruitment_views.xml
@@ -5,6 +5,47 @@
         <!-- menu categories -->
 
         <!-- actions -->
+        <record model="ir.actions.act_window" id="hr_recruitment.hr_applicant_resumes">
+            <field name="name">All Resumes and Letters</field>
+            <field name="res_model">ir.attachment</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="view_id" eval="False"/>
+            <field name="search_view_id" ref="hr_recruitment.ir_attachment_view_search_inherit_hr_recruitment"/>
+            <field name="domain">[('res_model','=','hr.applicant')]</field>
+            <field name="context">{'create': False}</field>
+            <field name="help" type="html">
+                <p>
+                    No document yet.
+                </p><p>
+                    This menu helps you search through resumes and motivation
+                    letters. Odoo automatically indexes .PDF, .DOC, DOCX, .TXT
+                    files so that you can search keywords from the content of these
+                    files.
+                </p>
+            </field>
+        </record>
+
+        <record model="ir.actions.act_window" id="oit_hr_applicant_resumes">
+            <field name="name">Resumes and Letters</field>
+            <field name="res_model">ir.attachment</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="view_id" eval="False"/>
+            <field name="search_view_id" ref="hr_recruitment.ir_attachment_view_search_inherit_hr_recruitment"/>
+            <field name="domain">['&amp;',('res_model','=','hr.applicant'),('res_id', '=', active_id)]</field>
+            <field name="context">{'create': False}</field>
+            <field name="help" type="html">
+                <p>
+                    No document yet.
+                </p><p>
+                    This menu helps you search through resumes and motivation
+                    letters. Odoo automatically indexes .PDF, .DOC, DOCX, .TXT
+                    files so that you can search keywords from the content of these
+                    files.
+                </p>
+            </field>
+        </record>
 
         <!-- views -->
         <record model="ir.ui.view" id="oit_crm_case_form_view_job">
